modify index calendar

--- a/function/main_app/templates/base2.html
+++ b/function/main_app/templates/base2.html
@@ -111,6 +111,8 @@
                     style="background-color: rgb(219, 204, 184);">예약석 초기화</a>
                 <a href="/delete_reservation_calendar" class="list-group-item list-group-item-action"
                     style="background-color: rgb(219, 204, 184);">예약석 삭제</a>
+                <a href="/room_status/" class="list-group-item list-group-item-action"
+                    style="background-color: rgb(219, 204, 184);">객실 상태</a>
                 <a href="#" class="list-group-item list-group-item-action"
                     style="background-color: rgb(219, 204, 184);">생겨날 메뉴</a>
                 <a href="/admin/" class="list-group-item list-group-item-action"
