--- a/function/main_app/templates/index.html
+++ b/function/main_app/templates/index.html
@@ -24,22 +24,25 @@
 <!-- IF 관리자 계정(superuser로 로그인 검증) 로그인 된 상태일시 실행되는 부분 -->
 <nav class="navbar navbar-expand-md navbar-light">
   <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-      <ul class="navbar-nav mr-auto">
-          <li class="nav-item "><a class="nav-link" href="/admin" style="font-weight: bold; font-size: medium;">관리자 페이지</a></li>
-          <li class="nav-item "><a class="nav-link" href="/employeeattendance/" style="font-weight: bold; font-size: medium;">관리자 메뉴</a></li>
-      </ul>
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item "><a class="nav-link" href="/admin" style="font-weight: bold; font-size: medium;">관리자 페이지</a>
+      </li>
+      <li class="nav-item "><a class="nav-link" href="/employeeattendance/"
+          style="font-weight: bold; font-size: medium;">관리자 메뉴</a></li>
+    </ul>
   </div>
   <div class="mx-auto order-0">
-      <a class="navbar-brand mx-auto" href="http://127.0.0.1:8000/" style="font-weight: bold; font-size: larger;">DB HOTEL</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
-          <span class="navbar-toggler-icon"></span>
-      </button>
+    <a class="navbar-brand mx-auto" href="http://127.0.0.1:8000/" style="font-weight: bold; font-size: larger;">DB
+      HOTEL</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+      <span class="navbar-toggler-icon"></span>
+    </button>
   </div>
   <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-      <ul class="navbar-nav ml-auto">
-          <li class="nav-item "><a class="nav-link" href="/accounts/logout" style="font-size: small;">로그아웃</a></li>
-          <li class="nav-item "><a class="nav-link" href="/accounts/signup/" style="font-size: small;">회원가입</a></li>
-      </ul>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item "><a class="nav-link" href="/accounts/logout" style="font-size: small;">로그아웃</a></li>
+      <li class="nav-item "><a class="nav-link" href="/accounts/signup/" style="font-size: small;">회원가입</a></li>
+    </ul>
   </div>
 </nav>
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -56,6 +59,18 @@
       <img src="https://hilton.co.kr/static/upload/hotel_main_20141216152904_lg_pc.jpg" height="610px"
         class="d-block w-100" alt="...">
     </div>
+    <div class="carousel-item">
+      <img src="https://hilton.co.kr/static/upload/hotel_main_20160425154505_lg_sp.jpg" height="610px"
+        class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://hilton.co.kr/static/upload/hotel_main_20170703141825_lg_sp.jpg" height="610px"
+        class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://hilton.co.kr/static/upload/hotel_main_20170703141858_lg_sp.jpg" height="610px"
+        class="d-block w-100" alt="...">
+    </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -67,23 +82,35 @@
   </a>
 </div>
 
-<footer class= "footer" style="position: absolute;">
+<footer class="footer" style="position: absolute;">
   <div class="container">
     <br>
     <div class="row">
-        <div class="col-sm-1"></div>
-        <div class="col-sm-2" style="text-align: center; font-weight: bold;">DB<br>HOTEL</div>
-        <div class="col-sm-3" style="font-weight: bold; font-size: small;"><p>서울DB호텔 T.02-1234-1234</p><p>제주DB호텔 T.064-1234-1234</p></div>
-        <div class="col-sm-1" style="font-weight: bold; font-size: small; color: rgb(32, 31, 29);"><p>고객센터</p><p>이용약관</p></div>
-        <div class="col-sm-2" style="font-weight: bold; font-size: small; color: rgb(32, 31, 29);"><p>이메일무단수집금지</p><p>개인정보처리방침</p></div>
-        <div class="col-sm-3">
-            <a class="btn btn-outline-dark btn-social mx-1" href="https://www.facebook.com/"><i class="fab fa-fw fa-facebook-f"></i></a>
-            <a class="btn btn-outline-dark btn-social mx-1" href="https://www.instagram.com/"><i class="fab fa-fw fa-instagram"></i></a>
-            <a class="btn btn-outline-dark btn-social mx-1" href="https://github.com/jaehoonkimm/DB_is_Free-Hotel_DB_System"><i class="fab fa-fw fa-git"></i></a>
-        </div>
+      <div class="col-sm-1"></div>
+      <div class="col-sm-2" style="text-align: center; font-weight: bold;">DB<br>HOTEL</div>
+      <div class="col-sm-3" style="font-weight: bold; font-size: small;">
+        <p>서울DB호텔 T.02-1234-1234</p>
+        <p>제주DB호텔 T.064-1234-1234</p>
+      </div>
+      <div class="col-sm-1" style="font-weight: bold; font-size: small; color: rgb(32, 31, 29);">
+        <p>고객센터</p>
+        <p>이용약관</p>
+      </div>
+      <div class="col-sm-2" style="font-weight: bold; font-size: small; color: rgb(32, 31, 29);">
+        <p>이메일무단수집금지</p>
+        <p>개인정보처리방침</p>
+      </div>
+      <div class="col-sm-3">
+        <a class="btn btn-outline-dark btn-social mx-1" href="https://www.facebook.com/"><i
+            class="fab fa-fw fa-facebook-f"></i></a>
+        <a class="btn btn-outline-dark btn-social mx-1" href="https://www.instagram.com/"><i
+            class="fab fa-fw fa-instagram"></i></a>
+        <a class="btn btn-outline-dark btn-social mx-1"
+          href="https://github.com/jaehoonkimm/DB_is_Free-Hotel_DB_System"><i class="fab fa-fw fa-git"></i></a>
+      </div>
     </div>
   </div>
-  </footer>
+</footer>
 
 
 
@@ -93,21 +120,23 @@
 <!-- IF 일반 유저 계정 로그인 되었으면 실행되는 부분 -->
 <nav class="navbar navbar-expand-md navbar-light">
   <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-      <ul class="navbar-nav mr-auto">
-          <li class="nav-item "><a class="nav-link" href="/reservation/" style="font-weight: bold; font-size: medium;">예약하기</a></li>
-      </ul>
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item "><a class="nav-link" href="/reservation/"
+          style="font-weight: bold; font-size: medium;">예약하기</a></li>
+    </ul>
   </div>
   <div class="mx-auto order-0">
-      <a class="navbar-brand mx-auto" href="http://127.0.0.1:8000/" style="font-weight: bold; font-size: larger;">DB HOTEL</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
-          <span class="navbar-toggler-icon"></span>
-      </button>
+    <a class="navbar-brand mx-auto" href="http://127.0.0.1:8000/" style="font-weight: bold; font-size: larger;">DB
+      HOTEL</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+      <span class="navbar-toggler-icon"></span>
+    </button>
   </div>
   <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-      <ul class="navbar-nav ml-auto">
-          <li class="nav-item "><a class="nav-link" href="/accounts/logout" style="font-size: small;">로그아웃</a></li>
-          <li class="nav-item "><a class="nav-link" href="/accounts/signup/" style="font-size: small;">회원가입</a></li>
-      </ul>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item "><a class="nav-link" href="/accounts/logout" style="font-size: small;">로그아웃</a></li>
+      <li class="nav-item "><a class="nav-link" href="/accounts/signup/" style="font-size: small;">회원가입</a></li>
+    </ul>
   </div>
 </nav>
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -124,6 +153,18 @@
       <img src="https://hilton.co.kr/static/upload/hotel_main_20141216152904_lg_pc.jpg" height="610"
         class="d-block w-100" alt="...">
     </div>
+    <div class="carousel-item">
+      <img src="https://hilton.co.kr/static/upload/hotel_main_20160425154505_lg_sp.jpg" height="610px"
+        class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://hilton.co.kr/static/upload/hotel_main_20170703141825_lg_sp.jpg" height="610px"
+        class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://hilton.co.kr/static/upload/hotel_main_20170703141858_lg_sp.jpg" height="610px"
+        class="d-block w-100" alt="...">
+    </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -137,68 +178,82 @@
 {% now "Y-m-d" as todays_date %}
 {% csrf_token %}
 <div>
-  <h3><br>예약 페이지<br></h3>
+  <h3><br>예약 가능 날짜<br></h3>
   <div class="row">
     <!-- 캘린더형 div 구현 + 날짜 보여주는 텍스트 부분 -->
     {% for days in reserv_day %}
-    <div class="col col-sm-2" style=" height: 200px; border:1px solid cadetblue; background-color: azure; font-size: 30px; font-weight: bolder;">
-    {% if days.day|date %}
-        <a> {{ days.day|date:"Y-m-d" }} </a> <br />
-    {% endif %}
+    <div class="col col-sm-2"
+      style=" height: 200px; border:1px solid rgb(90, 83, 74); background-color: rgba(219, 204, 184, 0.562); 
+      font-size: 30px; font-weight: bolder;">
+      {% if days.day|date %}
+      <a> {{ days.day|date:"Y-m-d" }} </a> <br />
+      {% endif %}
 
-        <!-- Grade별 남은 예약 가능한 자리를 보여주는 텍스트 부분 -->
-        <div style="font-size: large;">
-            {% for date in room_list %}
-            {% if days.day == date.day_id %}
-                {{ date.room_grade_id }} : 
-                {{ date.reservation_count }} <br />
-            {% endif %}
+      <!-- Grade별 남은 예약 가능한 자리를 보여주는 텍스트 부분 -->
+      <div style="font-size: large;">
+        {% for date in room_list %}
+        {% if days.day == date.day_id %}
+        {{ date.room_grade_id }} :
+        {{ date.reservation_count }} <br />
+        {% endif %}
         {% endfor %}
-        </div>
-
+      </div>
     </div>
-{% endfor %}
+    {% endfor %}
+  </div>
 </div>
-</div>
-<footer class= "footer">
+<footer class="footer">
   <div class="container">
     <br>
     <div class="row">
-        <div class="col-sm-1"></div>
-        <div class="col-sm-2" style="text-align: center; font-weight: bold;">DB<br>HOTEL</div>
-        <div class="col-sm-3" style="font-weight: bold; font-size: small;"><p>서울DB호텔 T.02-1234-1234</p><p>제주DB호텔 T.064-1234-1234</p></div>
-        <div class="col-sm-1" style="font-weight: bold; font-size: small; color: rgb(32, 31, 29);"><p>고객센터</p><p>이용약관</p></div>
-        <div class="col-sm-2" style="font-weight: bold; font-size: small; color: rgb(32, 31, 29);"><p>이메일무단수집금지</p><p>개인정보처리방침</p></div>
-        <div class="col-sm-3">
-            <a class="btn btn-outline-dark btn-social mx-1" href="https://www.facebook.com/"><i class="fab fa-fw fa-facebook-f"></i></a>
-            <a class="btn btn-outline-dark btn-social mx-1" href="https://www.instagram.com/"><i class="fab fa-fw fa-instagram"></i></a>
-            <a class="btn btn-outline-dark btn-social mx-1" href="https://github.com/jaehoonkimm/DB_is_Free-Hotel_DB_System"><i class="fab fa-fw fa-git"></i></a>
-        </div>
+      <div class="col-sm-1"></div>
+      <div class="col-sm-2" style="text-align: center; font-weight: bold;">DB<br>HOTEL</div>
+      <div class="col-sm-3" style="font-weight: bold; font-size: small;">
+        <p>서울DB호텔 T.02-1234-1234</p>
+        <p>제주DB호텔 T.064-1234-1234</p>
+      </div>
+      <div class="col-sm-1" style="font-weight: bold; font-size: small; color: rgb(32, 31, 29);">
+        <p>고객센터</p>
+        <p>이용약관</p>
+      </div>
+      <div class="col-sm-2" style="font-weight: bold; font-size: small; color: rgb(32, 31, 29);">
+        <p>이메일무단수집금지</p>
+        <p>개인정보처리방침</p>
+      </div>
+      <div class="col-sm-3">
+        <a class="btn btn-outline-dark btn-social mx-1" href="https://www.facebook.com/"><i
+            class="fab fa-fw fa-facebook-f"></i></a>
+        <a class="btn btn-outline-dark btn-social mx-1" href="https://www.instagram.com/"><i
+            class="fab fa-fw fa-instagram"></i></a>
+        <a class="btn btn-outline-dark btn-social mx-1"
+          href="https://github.com/jaehoonkimm/DB_is_Free-Hotel_DB_System"><i class="fab fa-fw fa-git"></i></a>
+      </div>
     </div>
   </div>
-  </footer>
+</footer>
 
 {% else %}
 <!-- 일반 유저 계정으로도 로그인 안 되었으면(비로그인 상태) 실행되는 부분 -->
 <nav class="navbar navbar-expand-md navbar-light">
   <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-      <ul class="navbar-nav mr-auto">
-      </ul>
+    <ul class="navbar-nav mr-auto">
+    </ul>
   </div>
   <div class="mx-auto order-0">
-      <a class="navbar-brand mx-auto" href="http://127.0.0.1:8000/" style="font-weight: bold; font-size: larger;">DB HOTEL</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
-          <span class="navbar-toggler-icon"></span>
-      </button>
+    <a class="navbar-brand mx-auto" href="http://127.0.0.1:8000/" style="font-weight: bold; font-size: larger;">DB
+      HOTEL</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+      <span class="navbar-toggler-icon"></span>
+    </button>
   </div>
   <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-      <ul class="navbar-nav ml-auto">
-          <li class="nav-item "><a class="nav-link" href="/accounts/login/" style="font-size: small;">로그인</a></li>
-          <li class="nav-item "><a class="nav-link" href="/accounts/signup/" style="font-size: small;">회원가입</a></li>
-      </ul>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item "><a class="nav-link" href="/accounts/login/" style="font-size: small;">로그인</a></li>
+      <li class="nav-item "><a class="nav-link" href="/accounts/signup/" style="font-size: small;">회원가입</a></li>
+    </ul>
   </div>
 </nav>
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel" >
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="https://hilton.co.kr/static/upload/hotel_main_20170703141601_lg_pc.jpg" height="610"
@@ -210,6 +265,18 @@
     </div>
     <div class="carousel-item">
       <img src="https://hilton.co.kr/static/upload/hotel_main_20141216152904_lg_pc.jpg" height="610"
+        class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://hilton.co.kr/static/upload/hotel_main_20160425154505_lg_sp.jpg" height="610px"
+        class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://hilton.co.kr/static/upload/hotel_main_20170703141825_lg_sp.jpg" height="610px"
+        class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://hilton.co.kr/static/upload/hotel_main_20170703141858_lg_sp.jpg" height="610px"
         class="d-block w-100" alt="...">
     </div>
   </div>
@@ -245,23 +312,35 @@
     <br>
   </div>
 </form>
-<footer class= "footer" style="position: absolute;">
+<footer class="footer" style="position: absolute;">
   <div class="container">
     <br>
     <div class="row">
-        <div class="col-sm-1"></div>
-        <div class="col-sm-2" style="text-align: center; font-weight: bold;">DB<br>HOTEL</div>
-        <div class="col-sm-3" style="font-weight: bold; font-size: small;"><p>서울DB호텔 T.02-1234-1234</p><p>제주DB호텔 T.064-1234-1234</p></div>
-        <div class="col-sm-1" style="font-weight: bold; font-size: small; color: rgb(32, 31, 29);"><p>고객센터</p><p>이용약관</p></div>
-        <div class="col-sm-2" style="font-weight: bold; font-size: small; color: rgb(32, 31, 29);"><p>이메일무단수집금지</p><p>개인정보처리방침</p></div>
-        <div class="col-sm-3">
-            <a class="btn btn-outline-dark btn-social mx-1" href="https://www.facebook.com/"><i class="fab fa-fw fa-facebook-f"></i></a>
-            <a class="btn btn-outline-dark btn-social mx-1" href="https://www.instagram.com/"><i class="fab fa-fw fa-instagram"></i></a>
-            <a class="btn btn-outline-dark btn-social mx-1" href="https://github.com/jaehoonkimm/DB_is_Free-Hotel_DB_System"><i class="fab fa-fw fa-git"></i></a>
-        </div>
+      <div class="col-sm-1"></div>
+      <div class="col-sm-2" style="text-align: center; font-weight: bold;">DB<br>HOTEL</div>
+      <div class="col-sm-3" style="font-weight: bold; font-size: small;">
+        <p>서울DB호텔 T.02-1234-1234</p>
+        <p>제주DB호텔 T.064-1234-1234</p>
+      </div>
+      <div class="col-sm-1" style="font-weight: bold; font-size: small; color: rgb(32, 31, 29);">
+        <p>고객센터</p>
+        <p>이용약관</p>
+      </div>
+      <div class="col-sm-2" style="font-weight: bold; font-size: small; color: rgb(32, 31, 29);">
+        <p>이메일무단수집금지</p>
+        <p>개인정보처리방침</p>
+      </div>
+      <div class="col-sm-3">
+        <a class="btn btn-outline-dark btn-social mx-1" href="https://www.facebook.com/"><i
+            class="fab fa-fw fa-facebook-f"></i></a>
+        <a class="btn btn-outline-dark btn-social mx-1" href="https://www.instagram.com/"><i
+            class="fab fa-fw fa-instagram"></i></a>
+        <a class="btn btn-outline-dark btn-social mx-1"
+          href="https://github.com/jaehoonkimm/DB_is_Free-Hotel_DB_System"><i class="fab fa-fw fa-git"></i></a>
+      </div>
     </div>
   </div>
-  </footer>
+</footer>
 {% endif %}
 {% endif %}
 
