--- a/function/main_app/templates/index.html
+++ b/function/main_app/templates/index.html
@@ -32,7 +32,7 @@
     </ul>
   </div>
   <div class="mx-auto order-0">
-    <a class="navbar-brand mx-auto" href="http://127.0.0.1:8000/" style="font-weight: bold; font-size: larger;">DB
+    <a class="navbar-brand mx-auto" href="http://127.0.0.1:8000/" style="font-weight: bold; font-size: larger; font-family: 'Castoro', serif;">DB
       HOTEL</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
       <span class="navbar-toggler-icon"></span>
@@ -87,7 +87,7 @@
     <br>
     <div class="row">
       <div class="col-sm-1"></div>
-      <div class="col-sm-2" style="text-align: center; font-weight: bold;">DB<br>HOTEL</div>
+      <div class="col-sm-2" style="text-align: center; font-weight: bold; font-family: 'Castoro', serif;">DB<br>HOTEL</div>
       <div class="col-sm-3" style="font-weight: bold; font-size: small;">
         <p>서울DB호텔 T.02-1234-1234</p>
         <p>제주DB호텔 T.064-1234-1234</p>
@@ -126,7 +126,7 @@
     </ul>
   </div>
   <div class="mx-auto order-0">
-    <a class="navbar-brand mx-auto" href="http://127.0.0.1:8000/" style="font-weight: bold; font-size: larger;">DB
+    <a class="navbar-brand mx-auto" href="http://127.0.0.1:8000/" style="font-weight: bold; font-size: larger; font-family: 'Castoro', serif;">DB
       HOTEL</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
       <span class="navbar-toggler-icon"></span>
@@ -178,7 +178,7 @@
 {% now "Y-m-d" as todays_date %}
 {% csrf_token %}
 <div>
-  <h3><br>예약 가능 날짜<br></h3>
+  <p style="font-weight: bolder; font-size: large;"><br>예약 가능한 날짜를 확인하세요</p>
   <div class="row">
     <!-- 캘린더형 div 구현 + 날짜 보여주는 텍스트 부분 -->
     {% for days in reserv_day %}
@@ -207,7 +207,7 @@
     <br>
     <div class="row">
       <div class="col-sm-1"></div>
-      <div class="col-sm-2" style="text-align: center; font-weight: bold;">DB<br>HOTEL</div>
+      <div class="col-sm-2" style="text-align: center; font-weight: bold; font-family: 'Castoro', serif;">DB<br>HOTEL</div>
       <div class="col-sm-3" style="font-weight: bold; font-size: small;">
         <p>서울DB호텔 T.02-1234-1234</p>
         <p>제주DB호텔 T.064-1234-1234</p>
@@ -240,7 +240,7 @@
     </ul>
   </div>
   <div class="mx-auto order-0">
-    <a class="navbar-brand mx-auto" href="http://127.0.0.1:8000/" style="font-weight: bold; font-size: larger;">DB
+    <a class="navbar-brand mx-auto" href="http://127.0.0.1:8000/" style="font-weight: bold; font-size: larger; font-family: 'Castoro', serif;">DB
       HOTEL</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
       <span class="navbar-toggler-icon"></span>
@@ -317,7 +317,7 @@
     <br>
     <div class="row">
       <div class="col-sm-1"></div>
-      <div class="col-sm-2" style="text-align: center; font-weight: bold;">DB<br>HOTEL</div>
+      <div class="col-sm-2" style="text-align: center; font-weight: bold; font-family: 'Castoro', serif;">DB<br>HOTEL</div>
       <div class="col-sm-3" style="font-weight: bold; font-size: small;">
         <p>서울DB호텔 T.02-1234-1234</p>
         <p>제주DB호텔 T.064-1234-1234</p>
