--- a/function/main_app/templates/account/base.html
+++ b/function/main_app/templates/account/base.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Castoro:ital@0;1&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,300;1,400&display=swap">
 
     <title>{% block head_title %}{% endblock %}</title>
     {% block extra_head %}
     {% endblock %}
     <style>
         body {
-            font-family: 'Nanum Myeongjo', serif;
+            font-family: 'Roboto', sans-serif;
             background-color: rgb(255, 255, 253);
             width: 100%;
             height: 100%;
@@ -22,13 +22,13 @@
 
         .navbar {
             height: 80px;
-            font-family: 'Nanum Myeongjo', serif;
+            font-family: 'Roboto', sans-serif;
             background-color: rgb(219, 204, 184);
             font-size: larger;
         }
 
         .footer {
-            font-family: 'Nanum Myeongjo', serif;
+            font-family: 'Roboto', sans-serif;
             width: 100%;
             height: 100px;
             position: absolute;
@@ -44,13 +44,12 @@
     <nav class="navbar navbar-expand-md navbar-light">
         <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item "><a class="nav-link" href="/reservation/"
-                        style="font-weight: bold; font-size: medium;">예약하기</a></li>
+
             </ul>
         </div>
         <div class="mx-auto order-0">
             <a class="navbar-brand mx-auto" href="http://127.0.0.1:8000/"
-                style="font-weight: bold; font-size: larger;">DB HOTEL</a>
+                style="font-weight: bold; font-size: larger; font-family: 'Castoro', serif;">DB HOTEL</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -88,7 +87,7 @@
             <br>
             <div class="row">
                 <div class="col-sm-1"></div>
-                <div class="col-sm-2" style="text-align: center; font-weight: bold;">DB<br>HOTEL</div>
+                <div class="col-sm-2" style="text-align: center; font-weight: bold; font-family: 'Castoro', serif;">DB<br>HOTEL</div>
                 <div class="col-sm-3" style="font-weight: bold; font-size: small;">
                     <p>서울DB호텔 T.02-1234-1234</p>
                     <p>제주DB호텔 T.064-1234-1234</p>
