--- a/function/main_app/templates/base.html
+++ b/function/main_app/templates/base.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Castoro:ital@0;1&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,300;1,400&display=swap">
     {% block title %}
     {% endblock title %}
     <style>
         body{
-            font-family: 'Nanum Myeongjo', serif;
+            font-family: 'Roboto', sans-serif;
             background-color: rgb(255, 255, 253);
             width : 100%;
             height: 100%;
@@ -18,12 +18,12 @@
         }
         .navbar{
             height: 80px;
-            font-family: 'Nanum Myeongjo', serif;
+            font-family: 'Roboto', sans-serif;
             background-color:rgb(219, 204, 184);
             font-size: larger;
         }
         .footer {
-            font-family: 'Nanum Myeongjo', serif;
+            font-family: 'Roboto', sans-serif;
             width:100%;
             height:100px;
             bottom:0;
