add : employee_mypage

--- a/function/main_app/templates/index.html
+++ b/function/main_app/templates/index.html
@@ -99,6 +99,7 @@
       <div class="col-sm-2" style="font-weight: bold; font-size: small; color: rgb(32, 31, 29);">
         <p>이메일무단수집금지</p>
         <p>개인정보처리방침</p>
+        <p> <request class="user">request.user.id</request></p>
       </div>
       <div class="col-sm-3">
         <a class="btn btn-outline-dark btn-social mx-1" href="https://www.facebook.com/"><i
