modify sidebar for mypage

--- a/function/main_app/templates/index.html
+++ b/function/main_app/templates/index.html
@@ -27,7 +27,7 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item "><a class="nav-link" href="/admin" style="font-weight: bold; font-size: medium;">관리자 페이지</a>
       </li>
-      <li class="nav-item "><a class="nav-link" href="/employeeattendance/"
+      <li class="nav-item "><a class="nav-link" href="/mypage"
           style="font-weight: bold; font-size: medium;">관리자 메뉴</a></li>
     </ul>
   </div>
@@ -201,6 +201,7 @@
     </div>
     {% endfor %}
   </div>
+  <br>
 </div>
 <footer class="footer">
   <div class="container">
