--- a/function/main_app/templates/base2.html
+++ b/function/main_app/templates/base2.html
@@ -8,7 +8,8 @@
     <meta name="author" content="">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Castoro:ital@0;1&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,300;1,400&display=swap">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Castoro:ital@0;1&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,300;1,400&display=swap">
 
     {% block title %}
     {% endblock title %}
@@ -101,6 +102,8 @@
         <div id="sidebar-wrapper">
             <div class="sidebar-heading" style="font-weight: bolder;">직원 전용 메뉴</div>
             <div class="list-group list-group-flush">
+                <a href="/mypage/" class="list-group-item list-group-item-action"
+                    style="background-color: rgb(219, 204, 184);">마이 페이지</a>
                 <a href="/employeeattendance/" class="list-group-item list-group-item-action"
                     style="background-color: rgb(219, 204, 184);">직원 출퇴근</a>
                 <a href="/emtaskassign/" class="list-group-item list-group-item-action"
@@ -127,7 +130,8 @@
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item "><button class="btn" id="menu-toggle"
                                 style="background-color:rgb(151, 139, 124);">
-                                <p style="display: inline; font-size: small; color: black; font-weight: bolder;">직원 메뉴</p>
+                                <p style="display: inline; font-size: small; color: black; font-weight: bolder;">직원 메뉴
+                                </p>
                             </button></li>
                     </ul>
                 </div>
@@ -140,7 +144,8 @@
                 </div>
                 <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item "><a class="nav-link" href="/accounts/logout" style="font-size: small;">로그아웃</a></li>
+                        <li class="nav-item "><a class="nav-link" href="/accounts/logout"
+                                style="font-size: small;">로그아웃</a></li>
                         <li class="nav-item "><a class="nav-link" href="/accounts/signup/"
                                 style="font-size: small;">회원가입</a>
                         </li>
@@ -159,7 +164,8 @@
             <br>
             <div class="row">
                 <div class="col-sm-1"></div>
-                <div class="col-sm-2" style="text-align: center; font-weight: bold; font-family: 'Castoro', serif;">DB<br>HOTEL</div>
+                <div class="col-sm-2" style="text-align: center; font-weight: bold; font-family: 'Castoro', serif;">
+                    DB<br>HOTEL</div>
                 <div class="col-sm-3" style="font-weight: bold; font-size: small;">
                     <p>서울DB호텔 T.02-1234-1234</p>
                     <p>제주DB호텔 T.064-1234-1234</p>
