--- a/function/main_app/templates/employee_attendance.html
+++ b/function/main_app/templates/employee_attendance.html
@@ -14,33 +14,12 @@
     <h3 class="my-3 border-bottom pb-2">출근 확인</h3>
     <br>
     {% csrf_token %}
-    <p>
-        <label for="id_office_check_out_timestamp" style="font-weight: bold;">출근 시간&nbsp;:&nbsp;&nbsp;</label>
-        <input type="text" name="office_check_out_timestamp" required id="id_office_check_out_timestamp"></p>
-    <p style="margin-bottom: 80px;"><label for="id_employee" style="font-weight: bold;">직원 이름&nbsp;:&nbsp;&nbsp;</label>
-        <select name="employee" required id="id_employee" style="height: 30px; width: 190px;">
-            <option value="" selected>---------</option>
-
-            <option value="1">Employees object (1)</option>
-
-            <option value="2">Employees object (2)</option>
-
-        </select></p>
+    {{ form.as_p }}
 
     <h3 class="my-3 border-bottom pb-2">퇴근 확인</h3>
     <br>
     {% csrf_token %}
-    <p><label for="id_office_check_out_timestamp" style="font-weight: bold;">퇴근 시간&nbsp;:&nbsp;&nbsp;</label> 
-        <input type="text" name="office_check_out_timestamp" required id="id_office_check_out_timestamp"></p>
-    <p><label for="id_employee" style="font-weight: bold;">직원 이름&nbsp;:&nbsp;&nbsp;</label> 
-        <select name="employee" required id="id_employee" style="height: 30px; width: 190px;">
-            <option value="" selected>---------</option>
-
-            <option value="1">Employees object (1)</option>
-
-            <option value="2">Employees object (2)</option>
-
-        </select></p>
+    {{ form.as_p }}
 </div>
 
 {% endblock contents %}
